// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar should render with back button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBar
    coins={1234}
    leftIcon="Back"
    onPressLeftIcon={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "left": 30,
              "position": "absolute",
            }
          }
        >
          <Back />
        </TouchableOpacity>,
        <Logo />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontSize": 36,
                "marginBottom": -8,
                "marginRight": 16,
              }
            }
          >
            1234
          </YuText>
          <Coins
            scale={0.5}
          />
        </Component>,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 8,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <Back />,
            null,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "left": 30,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>,
            <Coins
              scale={0.5}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 1234,
              "style": Object {
                "fontSize": 36,
                "marginBottom": -8,
                "marginRight": 16,
              },
            },
            "ref": null,
            "rendered": 1234,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "scale": 0.5,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "left": 30,
                "position": "absolute",
              }
            }
          >
            <Back />
          </TouchableOpacity>,
          <Logo />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "position": "absolute",
                "right": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>
            <Coins
              scale={0.5}
            />
          </Component>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": Array [
              <Back />,
              null,
            ],
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "left": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                style={
                  Object {
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>,
              <Coins
                scale={0.5}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 1234,
                "style": Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                },
              },
              "ref": null,
              "rendered": 1234,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "scale": 0.5,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`TopBar should render with default props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBar
    coins={1234}
    onPressLeftIcon={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "left": 30,
              "position": "absolute",
            }
          }
        >
          <Menu />
        </TouchableOpacity>,
        <Logo />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontSize": 36,
                "marginBottom": -8,
                "marginRight": 16,
              }
            }
          >
            1234
          </YuText>
          <Coins
            scale={0.5}
          />
        </Component>,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 8,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <Menu />,
            null,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "left": 30,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>,
            <Coins
              scale={0.5}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 1234,
              "style": Object {
                "fontSize": 36,
                "marginBottom": -8,
                "marginRight": 16,
              },
            },
            "ref": null,
            "rendered": 1234,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "scale": 0.5,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "left": 30,
                "position": "absolute",
              }
            }
          >
            <Menu />
          </TouchableOpacity>,
          <Logo />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "position": "absolute",
                "right": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>
            <Coins
              scale={0.5}
            />
          </Component>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": Array [
              <Menu />,
              null,
            ],
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "left": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                style={
                  Object {
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>,
              <Coins
                scale={0.5}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 1234,
                "style": Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                },
              },
              "ref": null,
              "rendered": 1234,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "scale": 0.5,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`TopBar should render with menu label 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBar
    coins={1234}
    menuLabel="Menu Label"
    onPressLeftIcon={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "left": 30,
              "position": "absolute",
            }
          }
        >
          <Menu />
          <Component
            style={
              Object {
                "marginBottom": -12,
                "marginLeft": 16,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontSize": 36,
                }
              }
            >
              Menu Label
            </YuText>
          </Component>
        </TouchableOpacity>,
        <Logo />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontSize": 36,
                "marginBottom": -8,
                "marginRight": 16,
              }
            }
          >
            1234
          </YuText>
          <Coins
            scale={0.5}
          />
        </Component>,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 8,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <Menu />,
            <Component
              style={
                Object {
                  "marginBottom": -12,
                  "marginLeft": 16,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontSize": 36,
                  }
                }
              >
                Menu Label
              </YuText>
            </Component>,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "left": 30,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "fontSize": 36,
                  }
                }
              >
                Menu Label
              </YuText>,
              "style": Object {
                "marginBottom": -12,
                "marginLeft": 16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Menu Label",
                "style": Object {
                  "fontSize": 36,
                },
              },
              "ref": null,
              "rendered": "Menu Label",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>,
            <Coins
              scale={0.5}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 1234,
              "style": Object {
                "fontSize": 36,
                "marginBottom": -8,
                "marginRight": 16,
              },
            },
            "ref": null,
            "rendered": 1234,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "scale": 0.5,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "left": 30,
                "position": "absolute",
              }
            }
          >
            <Menu />
            <Component
              style={
                Object {
                  "marginBottom": -12,
                  "marginLeft": 16,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontSize": 36,
                  }
                }
              >
                Menu Label
              </YuText>
            </Component>
          </TouchableOpacity>,
          <Logo />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "position": "absolute",
                "right": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>
            <Coins
              scale={0.5}
            />
          </Component>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": Array [
              <Menu />,
              <Component
                style={
                  Object {
                    "marginBottom": -12,
                    "marginLeft": 16,
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "fontSize": 36,
                    }
                  }
                >
                  Menu Label
                </YuText>
              </Component>,
            ],
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "left": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "fontSize": 36,
                    }
                  }
                >
                  Menu Label
                </YuText>,
                "style": Object {
                  "marginBottom": -12,
                  "marginLeft": 16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Menu Label",
                  "style": Object {
                    "fontSize": 36,
                  },
                },
                "ref": null,
                "rendered": "Menu Label",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                style={
                  Object {
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>,
              <Coins
                scale={0.5}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 1234,
                "style": Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                },
              },
              "ref": null,
              "rendered": 1234,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "scale": 0.5,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`TopBar should render with timer 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBar
    coins={1234}
    onPressLeftIcon={[MockFunction]}
    timer="11:58:00"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "left": 30,
              "position": "absolute",
            }
          }
        >
          <Menu />
        </TouchableOpacity>,
        <Component
          style={
            Object {
              "flexDirection": "row",
              "marginBottom": -12,
              "paddingLeft": 40,
            }
          }
        >
          <Image
            resizeMethod="resize"
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../src/components/molecules/top-bar/assets/clockIcon.png",
              }
            }
            style={
              Object {
                "height": 50,
                "marginRight": 18,
                "width": 50,
              }
            }
          />
          <YuText
            style={
              Object {
                "fontSize": 36,
                "marginTop": 4,
              }
            }
          >
            11:58:00
          </YuText>
        </Component>,
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontSize": 36,
                "marginBottom": -8,
                "marginRight": 16,
              }
            }
          >
            1234
          </YuText>
          <Coins
            scale={0.5}
          />
        </Component>,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 8,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <Menu />,
            null,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "left": 30,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Image
              resizeMethod="resize"
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../src/components/molecules/top-bar/assets/clockIcon.png",
                }
              }
              style={
                Object {
                  "height": 50,
                  "marginRight": 18,
                  "width": 50,
                }
              }
            />,
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginTop": 4,
                }
              }
            >
              11:58:00
            </YuText>,
          ],
          "style": Object {
            "flexDirection": "row",
            "marginBottom": -12,
            "paddingLeft": 40,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMethod": "resize",
              "resizeMode": "contain",
              "source": Object {
                "testUri": "../../../src/components/molecules/top-bar/assets/clockIcon.png",
              },
              "style": Object {
                "height": 50,
                "marginRight": 18,
                "width": 50,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "11:58:00",
              "style": Object {
                "fontSize": 36,
                "marginTop": 4,
              },
            },
            "ref": null,
            "rendered": "11:58:00",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>,
            <Coins
              scale={0.5}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 1234,
              "style": Object {
                "fontSize": 36,
                "marginBottom": -8,
                "marginRight": 16,
              },
            },
            "ref": null,
            "rendered": 1234,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "scale": 0.5,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "left": 30,
                "position": "absolute",
              }
            }
          >
            <Menu />
          </TouchableOpacity>,
          <Component
            style={
              Object {
                "flexDirection": "row",
                "marginBottom": -12,
                "paddingLeft": 40,
              }
            }
          >
            <Image
              resizeMethod="resize"
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../src/components/molecules/top-bar/assets/clockIcon.png",
                }
              }
              style={
                Object {
                  "height": 50,
                  "marginRight": 18,
                  "width": 50,
                }
              }
            />
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginTop": 4,
                }
              }
            >
              11:58:00
            </YuText>
          </Component>,
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "position": "absolute",
                "right": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>
            <Coins
              scale={0.5}
            />
          </Component>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": Array [
              <Menu />,
              null,
            ],
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "left": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Image
                resizeMethod="resize"
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/molecules/top-bar/assets/clockIcon.png",
                  }
                }
                style={
                  Object {
                    "height": 50,
                    "marginRight": 18,
                    "width": 50,
                  }
                }
              />,
              <YuText
                style={
                  Object {
                    "fontSize": 36,
                    "marginTop": 4,
                  }
                }
              >
                11:58:00
              </YuText>,
            ],
            "style": Object {
              "flexDirection": "row",
              "marginBottom": -12,
              "paddingLeft": 40,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMethod": "resize",
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../src/components/molecules/top-bar/assets/clockIcon.png",
                },
                "style": Object {
                  "height": 50,
                  "marginRight": 18,
                  "width": 50,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "11:58:00",
                "style": Object {
                  "fontSize": 36,
                  "marginTop": 4,
                },
              },
              "ref": null,
              "rendered": "11:58:00",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                style={
                  Object {
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>,
              <Coins
                scale={0.5}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 1234,
                "style": Object {
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                },
              },
              "ref": null,
              "rendered": 1234,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "scale": 0.5,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
